--- a/tcod-haskell.cabal
+++ b/tcod-haskell.cabal
@@ -13,12 +13,57 @@ build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.10
 
+flag examples
+  description: build engine examples
+  default: False
+
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
-  build-depends:       base >= 4.7 && < 5
+  exposed-modules:
+    Game.TCOD
+  -- c-sources:
+  build-depends:
+      base                      >= 4.7      && < 5
+    , inline-c                  >= 0.5      && < 0.6
+
   default-language:    Haskell2010
+  default-extensions:
+    ConstraintKinds
+    DeriveGeneric
+    FlexibleContexts
+    FlexibleInstances
+    FunctionalDependencies
+    GeneralizedNewtypeDeriving
+    MultiParamTypeClasses
+    OverloadedStrings
+    QuasiQuotes
+    RecordWildCards
+    ScopedTypeVariables
+    TemplateHaskell
+    TypeFamilies
+  extra-libraries: tcod
 
 source-repository head
   type:     git
   location: https://github.com/ncrashed/tcod-haskell
+
+executable tcod-haskell-sample01
+  hs-source-dirs:      app/sample01
+  main-is:             Main.hs
+  ghc-options:         -Odph -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -optlo-O3 -threaded -rtsopts -with-rtsopts=-N
+  -- other-modules:
+  build-depends:
+      base
+    , tcod-haskell
+
+  default-extensions:
+    OverloadedStrings
+    RecordWildCards
+    ScopedTypeVariables
+  default-language:    Haskell2010
+
+  if flag(examples)
+    Buildable: True
+  else
+    -- Buildable: False
+    Buildable: True
