--- a/tcod-haskell.cabal
+++ b/tcod-haskell.cabal
@@ -37,7 +37,9 @@ library
     src/Game/TCOD/Color.c
   build-depends:
       base                      >= 4.7      && < 5
+    , containers                >= 0.5      && < 0.6
     , inline-c                  >= 0.5      && < 0.6
+    , vector                    >= 0.12     && < 0.13
 
   default-language:    Haskell2010
   default-extensions:
