--- a/tcod-haskell.cabal
+++ b/tcod-haskell.cabal
@@ -36,6 +36,7 @@ library
     Game.TCOD.Fov
     Game.TCOD.FovTypes
     Game.TCOD.Heightmap
+    Game.TCOD.HeightmapInst
     Game.TCOD.Image
     Game.TCOD.List
     Game.TCOD.MersenneTypes
@@ -63,6 +64,7 @@ library
     , bytestring                >= 0.10     && < 0.11
     , containers                >= 0.5      && < 0.6
     , inline-c                  >= 0.5      && < 0.6
+    , repa                      >= 3.4      && < 3.5
     , sdl2                      >= 2.2      && < 2.3
     , vector                    >= 0.12     && < 0.13
 
