--- a/tcod-haskell.cabal
+++ b/tcod-haskell.cabal
@@ -45,6 +45,7 @@ library
     Game.TCOD.MouseTypes
     Game.TCOD.NameGen
     Game.TCOD.Noise
+    Game.TCOD.Path
     Game.TCOD.System
     Game.TCOD.Tree
     Game.TCOD.Version
@@ -64,6 +65,7 @@ library
     src/Game/TCOD/Mouse.c
     src/Game/TCOD/NameGen.c
     src/Game/TCOD/Noise.c
+    src/Game/TCOD/Path.c
     src/Game/TCOD/System.c
     src/Game/TCOD/Tree.c
     src/Game/TCOD/Version.c
