--- a/tcod-haskell.cabal
+++ b/tcod-haskell.cabal
@@ -10,7 +10,55 @@ maintainer:          ncrashed@gmail.com
 copyright:           2017 Anton Gushcha
 category:            Game
 build-type:          Custom
-extra-source-files:  README.md
+extra-source-files:
+  README.md
+  stack.yaml
+  terminal.png
+  libtcod/include/*.h
+  libtcod/include/*.hpp
+  libtcod/include/external/*.h
+  libtcod/include/gui/*.hpp
+  libtcod/src/*.c
+  libtcod/src/*.cpp
+  libtcod/src/gui/*.cpp
+  libtcod/src/png/*.c
+  libtcod/src/png/*.h
+  libtcod/src/zlib/*.h
+  libtcod/src/zlib/*.c
+  libtcod/LIBTCOD-CREDITS.txt
+  libtcod/LIBTCOD-LICENSE.txt
+  libtcod/build/autotools/configure.ac
+  libtcod/build/autotools/Makefile.am
+  libtcod/build/autotools/m4/*.m4
+  libtcod/samples/*.c
+  libtcod/samples/*.cpp
+  libtcod/samples/doctcod/*.cpp
+  libtcod/samples/doctcod/*.tpl
+  libtcod/samples/frost/*.cpp
+  libtcod/samples/hmtool/*.cpp
+  libtcod/samples/hmtool/*.hpp
+  libtcod/samples/navier/*.cpp
+  libtcod/samples/navier/*.hpp
+  libtcod/samples/rad/*.cpp
+  libtcod/samples/rad/*.hpp
+  libtcod/samples/rad/*.png
+  libtcod/samples/ripples/*.cpp
+  libtcod/samples/ripples/*.hpp
+  libtcod/samples/weather/*.cpp
+  libtcod/samples/weather/*.hpp
+  libtcod/samples/worldgen/*.cpp
+  libtcod/samples/worldgen/*.hpp
+  libtcod/samples/worldgen/*.png
+  libtcod/build.bat
+  libtcod/libtcod.cfg
+  libtcod/terminal.png
+  libtcod/data/img/*.png
+  libtcod/data/namegen/*.cfg
+  libtcod/data/namegen/*.txt
+  libtcod/data/rexpaint/*.xp
+  libtcod/data/cfg/*.cfg
+  libtcod/data/fonts/*.png
+  libtcod/data/fonts/*.txt
 cabal-version:       >=1.10
 
 custom-setup
