--- a/tcod-haskell.cabal
+++ b/tcod-haskell.cabal
@@ -15,6 +15,7 @@ extra-source-files:
   CHANGELOG.md
   stack.yaml
   terminal.png
+  include/externa/*.h
 cabal-version:       >=1.10
 
 flag examples
